2010-12-10  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Darin Adler.

        REGRESSION(r73799): editing/execCommand/4920488.html fails
        https://bugs.webkit.org/show_bug.cgi?id=50854

        The regression was caused by Range::processContents's not extracting
        m_end.container()->firstChild(). Fixed the bug by always adding the first child.

        * dom/Range.cpp:
        (WebCore::Range::processContents):


Canonical link: https://commits.webkit.org/64184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73818 268f45cc-cd09-0410-ab3c-d52691b4dbfc